--- a/notebooks/04_crossvalidation.ipynb
+++ b/notebooks/04_crossvalidation.ipynb
@@ -14,6 +14,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -26,8 +37,6 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import time\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "\n",
     "from numpy.linalg import inv\n",
     "from numpy.random import normal\n",
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -82,9 +91,7 @@
     }
    },
    "source": [
-    "## 4.1 Cross-Validation\n",
-    "\n",
-    "[*go to index*](#/1)"
+    "## 4.1 Cross-Validation"
    ]
   },
   {
@@ -111,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +234,7 @@
        "4       1                ford torino  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -269,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -308,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -319,7 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.0266 seconds\n"
+      "Time elapsed: 0.0277 seconds\n"
      ]
     }
    ],
@@ -350,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -383,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -413,7 +420,7 @@
     }
    },
    "source": [
-    "This figure illustrates a **first drawback** of the validation approach: the estimate of the test error rate can be highly variable, depending on pre- cisely which observations are included in the training set and which observations are included in the validation set.\n",
+    "This figure illustrates a **first drawback** of the validation approach: the estimate of the test error rate can be highly variable, depending on precisely which observations are included in the training set and which observations are included in the validation set.\n",
     "\n",
     "\n",
     "The **second drawback** of the validation approach is that only a subset of the observations—those that are included in the training set rather than in the validation set—are used to fit the model. Since statistical methods tend to per- form worse when trained on fewer observations, this suggests that the validation set error rate may tend to overestimate the test error rate for the model fit on the entire data set."
@@ -438,7 +445,7 @@
     }
    },
    "source": [
-    "Leave-one-out cross-validation (LOOCV) ttempts to address that method’s drawbacks.\n",
+    "Leave-one-out cross-validation (LOOCV) attempts to address that method’s drawbacks.\n",
     "\n",
     "Like the validation set approach, LOOCV involves splitting the set of observations into two parts. However, instead of creating two subsets of comparable size, a single observation $i$ is used for the validation set, and the remaining $n-1$ observations make up the training set. The statistical learning method is fit on the $n−1$ training observations and the MSE is computed using the excluded observation $i$. The procedure is repeated $n$ times, for $i=1,...,n$.\n",
     "\n",
@@ -466,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -508,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -519,8 +526,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.0261 seconds\n",
-      "Time elapsed: 1.1189 seconds\n"
+      "Time elapsed: 0.0270 seconds\n",
+      "Time elapsed: 1.1495 seconds\n"
      ]
     }
    ],
@@ -552,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -578,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -665,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -711,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -722,8 +729,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 1.1403 seconds\n",
-      "Time elapsed: 0.3066 seconds\n"
+      "Time elapsed: 1.1153 seconds\n",
+      "Time elapsed: 0.3078 seconds\n"
      ]
     }
    ],
@@ -756,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -796,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -833,9 +840,7 @@
     }
    },
    "source": [
-    "## 4.2 The Bootstrap\n",
-    "\n",
-    "[*go to index*](#/1)"
+    "## 4.2 The Bootstrap"
    ]
   },
   {
@@ -846,7 +851,7 @@
     }
    },
    "source": [
-    "The bootstrap is a widely applicable and extremely powerful statistical tool that can be used to quantify the uncertainty associated with a given estimator or statistical learning method. In the specific case of linear regression, this is not particularly useful since there exist a formula for the standard errors. However, there are many models (almost all actually) for which there exists no closed for solution to the estimator variance.\n",
+    "The bootstrap is a widely applicable and extremely powerful statistical tool that can be used to **quantify the uncertainty** associated with a given estimator or statistical learning method. In the specific case of linear regression, this is not particularly useful since there exist a formula for the standard errors. However, there are many models (almost all actually) for which there exists no closed for solution to the estimator variance.\n",
     "\n",
     "In pricinple, we would like to draw independent samples from the true data generating process and assessing the uncertainty of an estimator by comparing its values across the different samples. However, this is clearly unfeasible since we do not know the true data generating process.\n",
     "\n",
@@ -872,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -905,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -939,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -985,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1031,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -1065,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
