--- a/notebooks/09_postdoubleselection.ipynb
+++ b/notebooks/09_postdoubleselection.ipynb
@@ -8,27 +8,29 @@
     }
    },
    "source": [
-    "# Session 9: Post-double Selection"
+    "# Session 9: Post-Double Selection"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/lib/python3.9/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "  import pandas.util.testing as tm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import everything\n",
     "import pandas as pd\n",
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -71,21 +73,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Remove warnings\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -93,9 +80,7 @@
     }
    },
    "source": [
-    "## 9.1 Frisch-Waugh theorem\n",
-    "\n",
-    "[*back to index*](#/1)"
+    "## 9.1 Frisch-Waugh theorem"
    ]
   },
   {
@@ -679,7 +664,7 @@
     }
    },
    "source": [
-    "The pre-testing coefficient is much less biased than the short regression one. But it's still biased.\n",
+    "The pre-testing coefficient is very close to the true coefficient.\n",
     "\n",
     "However, the main effect of pre-testing is on inference. With pre-testing, the distribution of the estimator is not gaussian anymore. "
    ]
@@ -862,6 +847,8 @@
     }
    },
    "source": [
+    "When $\\beta_0$ is \"small\", the distribution of the pre-testing estimator for $\\alpha$ is not normal.\n",
+    "\n",
     "However, the magnitue of $\\beta_0$ is a relative concept. For an infinite sample size, $\\beta_0$ is always going to be \"big enough\", in the sense that with an infinite sample size the probability fo false positives in testing $H_0: \\beta_0 = 0$ is going to zero. I.e. we always select the correct model specification, the long regression.\n",
     "\n",
     "Let's have a look at the distibution of $\\hat \\alpha_{\\text{PRE-TEST}}$ when the sample size increaes."
@@ -1513,7 +1500,7 @@
     }
    },
    "source": [
-    "### Post-double selection and Machine Learning"
+    "### Post-double Selection and Machine Learning"
    ]
   },
   {
@@ -2268,7 +2255,7 @@
       "Lasso    : -8.7963\n",
       "Tree     : 1.2879\n",
       "Forest   : 2.4938\n",
-      "Boosting : 0.5976\n"
+      "Boosting : 0.5977\n"
      ]
     }
    ],
@@ -2337,7 +2324,7 @@
       "Ridge    : 0.6670\n",
       "Lasso    : 1.2511\n",
       "Tree     : 0.9605\n",
-      "Forest   : 0.5325\n",
+      "Forest   : 0.5327\n",
       "Boosting : 1.0327\n"
      ]
     }
