--- a/notebooks/10_unsupervised.ipynb
+++ b/notebooks/10_unsupervised.ipynb
@@ -14,6 +14,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -36,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -58,21 +69,6 @@
     "plt.rcParams['axes.titlesize'] = 18\n",
     "plt.rcParams['axes.labelsize'] = 14\n",
     "plt.rcParams['legend.fontsize'] = 14"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Remove warnings\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -104,9 +100,7 @@
     }
    },
    "source": [
-    "## 10.2 Principal Component Analysis\n",
-    "\n",
-    "[*back to index*](#/1)"
+    "## 10.2 Principal Component Analysis"
    ]
   },
   {
@@ -573,7 +567,7 @@
     }
    },
    "source": [
-    "### PCA and spectral analysis"
+    "### PCA and Spectral Analysis"
    ]
   },
   {
@@ -1398,9 +1392,7 @@
     }
    },
    "source": [
-    "## Clustering\n",
-    "\n",
-    "[*back to index*](#/1)"
+    "## Clustering"
    ]
   },
   {
@@ -2210,7 +2202,7 @@
     }
    },
    "source": [
-    "### The linkage function"
+    "### The Linkage Function"
    ]
   },
   {
