--- a/notebooks/10_unsupervised.ipynb
+++ b/notebooks/10_unsupervised.ipynb
@@ -2702,13 +2702,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -2824,7 +2817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case"
+    "In this case, GMM does a very poor job identifying the original clusters."
    ]
   },
   {
