--- a/notebooks/10_unsupervised.ipynb
+++ b/notebooks/10_unsupervised.ipynb
@@ -2698,7 +2698,7 @@
    ],
    "source": [
     "# Plot\n",
-    "plot_assignment_gmm(X, clusters1, distr1, 1, logL1)"
+    "plot_assignment_gmm(X, clusters1, distr1, 1, logL1);"
    ]
   },
   {
