--- a/notebooks/08_neuralnets.ipynb
+++ b/notebooks/08_neuralnets.ipynb
@@ -152,7 +152,7 @@
    "source": [
     "We can represent the setting as follows.\n",
     "\n",
-    "<img src=\"figures/nn1.jpeg\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
+    "<img src=\"../figures/nn1.jpeg\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
     "\n",
     "In this case, the model is easy to understand and to fit but has a big drawback : there is no non-linearity! This obviously do not respect our non-linear assumption. "
    ]
@@ -184,7 +184,7 @@
     "\n",
     "where $a$ is a function called **activation function** which is non-linear.\n",
     "\n",
-    "<img src=\"figures/nn2.jpeg\" alt=\"Drawing\" style=\"width: 600px;\"/>"
+    "<img src=\"../figures/nn2.jpeg\" alt=\"Drawing\" style=\"width: 600px;\"/>"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "source": [
     "Graphically:\n",
     "\n",
-    "<img src=\"figures/nn3.jpeg\" alt=\"Drawing\" style=\"width: 900px;\"/>\n",
+    "<img src=\"../figures/nn3.jpeg\" alt=\"Drawing\" style=\"width: 900px;\"/>\n",
     "\n",
     "This last model is a basic feedforward neural network with:\n",
     " - 2 entries ($i_1$ and $i_2$)\n",
@@ -2823,7 +2823,7 @@
    "source": [
     "Convolutional Neural Nets are often applied when dealing with image/video data. They are usually coded with each feature being a pixel and its value is the pixel color (3 dimensional RGB array).\n",
     "\n",
-    "<img src=\"figures/cnn1.png\" style=\"width: 400px;\"/>"
+    "<img src=\"../figures/cnn1.png\" style=\"width: 400px;\"/>"
    ]
   },
   {
@@ -2840,7 +2840,7 @@
     " \n",
     "Convolutional Neural Nets exploit the second characteristic to alleviate the computational problems arising from the first. They do it by constructing a first layer that does not build on evey feature but only on adjacent ones.\n",
     "\n",
-    "<img src=\"figures/cnn1.gif\" style=\"width: 400px;\"/>\n",
+    "<img src=\"../figures/cnn1.gif\" style=\"width: 400px;\"/>\n",
     "\n",
     "In this way, most of the information is preserved, on a lower dimensional representation."
    ]
@@ -2879,7 +2879,7 @@
    "source": [
     "Grafically:\n",
     " \n",
-    "<img src=\"figures/rnn1.png\" style=\"width: 600px;\"/>\n",
+    "<img src=\"../figures/rnn1.png\" style=\"width: 600px;\"/>\n",
     "\n",
     "In summary, in a vanilla neural network, a fixed size input vector is transformed into a fixed size output vector. Such a network becomes “recurrent” when you repeatedly apply the transformations to a series of given input and produce a series of output vectors."
    ]
@@ -2905,7 +2905,7 @@
    "source": [
     "Sometimes it’s not just about learning from the past to predict the future, but we also need to look into the future to fix the past. In speech recognition and handwriting recognition tasks, where there could be considerable ambiguity given just one part of the input, we often need to know what’s coming next to better understand the context and detect the present.\n",
     "\n",
-    "<img src=\"figures/rnn2.png\" style=\"width: 600px;\"/>\n",
+    "<img src=\"../figures/rnn2.png\" style=\"width: 600px;\"/>\n",
     "\n",
     "This does introduce the obvious challenge of how much into the future we need to look into, because if we have to wait to see all inputs then the entire operation will become costly."
    ]
@@ -2931,7 +2931,7 @@
    "source": [
     "A recurrent neural network parses the inputs in a sequential fashion. A recursive neural network is similar to the extent that the transitions are repeatedly applied to inputs, but not necessarily in a sequential fashion. Recursive Neural Networks are a more general form of Recurrent Neural Networks. It can operate on any hierarchical tree structure. Parsing through input nodes, combining child nodes into parent nodes and combining them with other child/parent nodes to create a tree like structure. Recurrent Neural Networks do the same, but the structure there is strictly linear. i.e. weights are applied on the first input node, then the second, third and so on.\n",
     "\n",
-    "<img src=\"figures/rnn3.png\" style=\"width: 600px;\"/>\n",
+    "<img src=\"../figures/rnn3.png\" style=\"width: 600px;\"/>\n",
     "\n",
     "But this raises questions pertaining to the structure. How do we decide that? If the structure is fixed like in Recurrent Neural Networks then the process of training, backprop etc makes sense in that they are similar to a regular neural network. But if the structure isn’t fixed, is that learnt as well?"
    ]
